fixes admin exam added css issue and certificate not showing issue

--- a/client/src/output.css
+++ b/client/src/output.css
@@ -1751,6 +1751,10 @@ video {
   align-items: center;
 }
 
+.items-stretch {
+  align-items: stretch;
+}
+
 .justify-start {
   justify-content: flex-start;
 }
@@ -2957,6 +2961,10 @@ body {
 
   .sm\:flex-row {
     flex-direction: row;
+  }
+
+  .sm\:items-center {
+    align-items: center;
   }
 
   .sm\:gap-2 {
